Изменение коллекции Color на Colors для избежания ошибок программы.

--- a/Programming/Programming.csproj
+++ b/Programming/Programming.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Color.cs" />
+    <Compile Include="Model\Colors.cs" />
     <Compile Include="Model\EducationForm.cs" />
     <Compile Include="Model\Gerne.cs" />
     <Compile Include="Model\Seasons.cs" />
