--- a/Programming/Programming.csproj
+++ b/Programming/Programming.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Model\Seasons.cs" />
     <Compile Include="Model\Smartphones.cs" />
     <Compile Include="Model\Weekday.cs" />
-    <Compile Include="Model\Enums.cs" />
+    <Compile Include="View\Enums.cs" />
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
