--- a/Programming/Programming.csproj
+++ b/Programming/Programming.csproj
@@ -49,12 +49,12 @@
     <Compile Include="Model\Discipline.cs" />
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\Movie.cs" />
-    <Compile Include="Model\Colors.cs" />
-    <Compile Include="Model\EducationForm.cs" />
-    <Compile Include="Model\Genre.cs" />
-    <Compile Include="Model\Seasons.cs" />
-    <Compile Include="Model\Smartphones.cs" />
-    <Compile Include="Model\Weekday.cs" />
+    <Compile Include="Model\Enums\Colors.cs" />
+    <Compile Include="Model\Enums\EducationForm.cs" />
+    <Compile Include="Model\Enums\Genre.cs" />
+    <Compile Include="Model\Enums\Seasons.cs" />
+    <Compile Include="Model\Enums\Smartphones.cs" />
+    <Compile Include="Model\Enums\Weekday.cs" />
     <Compile Include="Model\Rectangle.cs" />
     <Compile Include="Model\Route.cs" />
     <Compile Include="Model\Time.cs" />
