--- a/Programming/Programming.csproj
+++ b/Programming/Programming.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Point2D.cs" />
+    <Compile Include="Model\Ring.cs" />
     <Compile Include="Model\Subject.cs" />
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\Movie.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="Model\Route.cs" />
     <Compile Include="Model\Time.cs" />
     <Compile Include="Model\Song.cs" />
+    <Compile Include="Model\Validator.cs" />
     <Compile Include="View\Enums.cs" />
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
