--- a/Programming/Programming.csproj
+++ b/Programming/Programming.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\CollisionManager.cs" />
     <Compile Include="Model\Point2D.cs" />
     <Compile Include="Model\Ring.cs" />
     <Compile Include="Model\Subject.cs" />
