--- a/Programming/Programming.csproj
+++ b/Programming/Programming.csproj
@@ -46,9 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\CollisionManager.cs" />
-    <Compile Include="Model\Point2D.cs" />
-    <Compile Include="Model\Ring.cs" />
+    <Compile Include="Model\Geometry\CollisionManager.cs" />
+    <Compile Include="Model\Geometry\Point2D.cs" />
+    <Compile Include="Model\Geometry\RectangleFactory.cs" />
+    <Compile Include="Model\Geometry\Ring.cs" />
     <Compile Include="Model\Subject.cs" />
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\Movie.cs" />
@@ -58,7 +59,7 @@
     <Compile Include="Model\Enums\Seasons.cs" />
     <Compile Include="Model\Enums\Smartphones.cs" />
     <Compile Include="Model\Enums\Weekday.cs" />
-    <Compile Include="Model\Rectangle.cs" />
+    <Compile Include="Model\Geometry\Rectangle.cs" />
     <Compile Include="Model\Route.cs" />
     <Compile Include="Model\Time.cs" />
     <Compile Include="Model\Song.cs" />
