--- a/ListOfEmployees/ListOfEmployees.csproj
+++ b/ListOfEmployees/ListOfEmployees.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F79F5A70-6AC0-4AC9-B13D-C97076DDEEBC}</ProjectGuid>
+    <ProjectGuid>{8D8CFBB5-B387-42CC-A607-0E9A4E10AF68}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ListOfEmployees</RootNamespace>
     <AssemblyName>ListOfEmployees</AssemblyName>
@@ -32,12 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>Properties\Resources\user_256x256.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,20 +50,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\AppColors.cs" />
+    <Compile Include="Model\Constants.cs" />
     <Compile Include="Model\Employees\Employee.cs" />
     <Compile Include="Model\Employees\EmployeeFactory.cs" />
-    <Compile Include="Model\Constants.cs" />
     <Compile Include="Model\Services\Serializer.cs" />
     <Compile Include="Model\Services\Sorter.cs" />
     <Compile Include="Model\Services\Validator.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -77,9 +74,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -94,13 +88,20 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Properties\Resources\minus_24x24.png" />
-    <Content Include="Properties\Resources\minus_24x24_uncolor.png" />
-    <Content Include="Properties\Resources\plus_24x24.png" />
-    <Content Include="Properties\Resources\plus_24x24_uncolor.png" />
-    <Content Include="Properties\Resources\user_256x256.ico" />
+    <None Include="Resources\minus_24x24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minus_24x24_uncolor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\plus_24x24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\plus_24x24_uncolor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user_256x256.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
