--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Category.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\InitialConstans.cs" />
     <Compile Include="Model\Item.cs" />
