Композиция класса "один ко многим" + UML-диаграмма

--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\InitialConstans.cs" />
     <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\Store.cs" />
     <Compile Include="Services\AppColors.cs" />
     <Compile Include="Services\CustomerFactory.cs" />
     <Compile Include="Services\ItemFactory.cs" />
