--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderStatus.cs" />
+    <Compile Include="Model\PriorityOrder.cs" />
     <Compile Include="Model\Store.cs" />
     <Compile Include="Services\AppColors.cs" />
     <Compile Include="Services\CustomerFactory.cs" />
@@ -101,6 +102,12 @@
     <Compile Include="View\Tabs\OrdersTab.Designer.cs">
       <DependentUpon>OrdersTab.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Tabs\PriorityOrdersTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Tabs\PriorityOrdersTab.Designer.cs">
+      <DependentUpon>PriorityOrdersTab.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -128,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Tabs\OrdersTab.resx">
       <DependentUpon>OrdersTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Tabs\PriorityOrdersTab.resx">
+      <DependentUpon>PriorityOrdersTab.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
