--- a/src/Contacts/View.csproj
+++ b/src/Contacts/View.csproj
@@ -9,7 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModel\" />
+    <None Remove="contacts_96x96.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="contacts_96x96.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\Services\" />
   </ItemGroup>
 
 </Project>
