--- a/src/Contacts/View.csproj
+++ b/src/Contacts/View.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="contacts_96x96.ico" />
+    <Resource Include="Resources\contacts_96x96.ico" />
   </ItemGroup>
 
 </Project>
