Экстренный коммит перед попыткой переписать и исправить MainVM

--- a/src/Contacts/View.csproj
+++ b/src/Contacts/View.csproj
@@ -11,16 +11,18 @@
   <ItemGroup>
     <None Remove="contacts_96x96.ico" />
     <None Remove="photo_placeholder_100x100.png" />
+    <None Remove="Resources\Images\photo_placeholder_100x100.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="photo_placeholder_100x100.png" />
     <Resource Include="Resources\contacts_96x96.ico" />
+    <Resource Include="Resources\Images\photo_placeholder_100x100.png" />
   </ItemGroup>
 
 </Project>
