feature(View, Model, ViewModel): разделил проект на 3 отдельных проекта.

--- a/src/Contacts/View.csproj
+++ b/src/Contacts/View.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\contacts_96x96.ico" />
     <Resource Include="Resources\Images\photo_placeholder_100x100.png" />
   </ItemGroup>
